Java features should be preferred to Guava
Fix code-smell reported by sonnarcloud:
https://rules.sonarsource.com/java/RSPEC-4738

Signed-off-by: Peter Suna <peter.suna@pantheon.tech>
(cherry picked from commit 15d7e028b7bc4388ecbffd3f549b4b6bb0779266)